# django-model-event-actions

./: .gitignore  LICENSE  README.rst  manage.py  publish_pypi.py  readme.rst  requirements.txt  setup.cfg  setup.py
docs/: conf.py  contribution.rst  index.rst  install.rst  tutorial.rst
event_actions/: constants.py  decorators.py  exceptions.py  mixins.py  models.py
model_events/: asgi.py  decorators.py  mixins.py  models.py  settings.py
tests/: exception.py  models.py
tests/migrations/: 0001_initial.py
tests/tests/: base.py  test_decorators.py
