[metadata]
name = django-model-event-actions
version = 1.0.4
author = Arya Khaligh
author_email = bartararya@gmail.com
url = https://github.com/aryabartar/django-model-event-actions
description = A replacement for Django Signals for a cleaner design
long_description = file: README.rst
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = django model signals event handler
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6